<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SimpleActivity">

    <Button
        android:id="@+id/clearButton"
        android:layout_width="178dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/c"
        app:layout_constraintBottom_toTopOf="@+id/num9"
        app:layout_constraintStart_toEndOf="@+id/bskpButton" />

    <Button
        android:id="@+id/num6"
        android:layout_width="81dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@+id/num3"
        app:layout_constraintStart_toEndOf="@+id/num5" />

    <Button
        android:id="@+id/num9"
        android:layout_width="81dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/num6"
        app:layout_constraintStart_toEndOf="@+id/num8" />

    <Button
        android:id="@+id/num5"
        android:layout_width="81dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/num2"
        app:layout_constraintStart_toEndOf="@+id/num4" />

    <Button
        android:id="@+id/num8"
        android:layout_width="81dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/num5"
        app:layout_constraintStart_toEndOf="@+id/num7" />

    <Button
        android:id="@+id/num4"
        android:layout_width="90dp"
        android:layout_height="67dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/num1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/num7"
        android:layout_width="90dp"
        android:layout_height="67dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/num4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bskpButton"
        android:layout_width="90dp"
        android:layout_height="67dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="12dp"
        android:text="@string/bksp"
        app:layout_constraintBottom_toTopOf="@+id/num7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="81dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@+id/plusButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toEndOf="@+id/equalButton" />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="81dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/multiply"
        app:layout_constraintBottom_toTopOf="@+id/minusButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toEndOf="@+id/num6" />

    <Button
        android:id="@+id/divideButton"
        android:layout_width="81dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/divide"
        app:layout_constraintBottom_toTopOf="@+id/multiplyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toEndOf="@+id/num9" />

    <Button
        android:id="@+id/plusminusButton"
        android:layout_width="81dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="12dp"
        android:text="@string/plusminus"
        app:layout_constraintBottom_toTopOf="@+id/divideButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toEndOf="@+id/clearButton" />

    <Button
        android:id="@+id/num3"
        android:layout_width="81dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/equalButton"
        app:layout_constraintStart_toEndOf="@+id/num2" />

    <Button
        android:id="@+id/num2"
        android:layout_width="81dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/pointButton"
        app:layout_constraintStart_toEndOf="@+id/num1" />

    <Button
        android:id="@+id/num1"
        android:layout_width="90dp"
        android:layout_height="67dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/num0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/num0"
        android:layout_width="90dp"
        android:layout_height="67dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="32dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="81dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="32dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/equalButton" />

    <Button
        android:id="@+id/equalButton"
        android:layout_width="81dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pointButton" />

    <Button
        android:id="@+id/pointButton"
        android:layout_width="81dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/num0" />

    <TextView
        android:id="@+id/operationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="end"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/clearButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="10dp"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/clearButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operationTextView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>